--- a/assets/estilos/SaSS/_predef.scss
+++ b/assets/estilos/SaSS/_predef.scss
@@ -144,6 +144,7 @@
     font-weight: $square_btn-fntwght;
     text-align: center;
     transition: .1s linear all;
+    cursor: pointer;
     // outline: none;
 
     // &:hover {
